0.0.23_1 (2014-05-01)

   API Changes:
       - None.

   New Features:
      - None.

   Enhancements:
      - None.

   Bug Fixes:
      - None.

0.0.22 (2014-06-30)

   API Changes:
       - $sth->xarrays in scalar context now returns undef on empty
         rows. Callers can check for definedness if need be before
         looping.

   New Features:
      - None.

   Enhancements:
      - None.

   Bug Fixes:
      - None.

0.0.20 (2014-06-13)

    API Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - None.

    Bug Fixes:
        - Translate arrayrefs as "IN (?,?)" for ON hashrefs

0.0.18 (2014-04-10)

    API Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Remove unecessary subtest() calls in tests

    Bug Fixes:
        - Make drop_everything() independent of individual drop methods
        - SQLite: drop_tables() also needs to drop indexes & triggers

0.0.16 (2014-04-07)

    API Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - None.

    Bug Fixes:
        - Include a proper MANIFEST (0.0.14 was broken).

0.0.14 (2014-04-07)

    API Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Add UPDATE ... SET support
        - Split drop_everything() into individual methods
        - Call DBI->do() from xdo() when no bind values required

    Bug Fixes:
        - Ensure VALUES appears when argument is not an ARRAY or HASH
          reference.
        - Correctly handle SCALAR refs in VALUES hashrefs

0.0.12 (2013-12-26)

    API Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Insert DEFAULT VALUES when given empty structures

    Bug Fixes:
        - Stop "shift" warnings on earlier Perls.
        - Do not include trailing ";" in prepare statements

0.0.10 (2013-12-14)

    API Changes:
        - Consistent naming of DBIx::ThinSQL::Deploy::* methods
