@@ -1,10 +1,18 @@
 0.0.23_1 (2014-05-01)
 
    API Changes:
-       - None.
+       - Methods RENAMED:
+            xarray() -> xarrayref()
+            xarrays() -> xarrayrefs()
+            xhash() -> xhashref()
+            xhashes() -> xhashrefs()
+       - xarrayref() no longer returns a list. Functionality replaced
+         by the new xlist() method.
 
    New Features:
-      - None.
+      - New methods:
+            xval() returns a single scalar
+            xlist() returns first row as a list
 
    Enhancements:
       - None.
